# static-analysis

./: AST.hs  Interpreter.hs  Main.hs  README.md  SignLattice.hs  Types.hs  stack.yaml  static-analysis.cabal
app/: Main.hs
examples/: ex1
lib/: AST.hs  Interpreter.hs  SignLattice.hs
src/: Main.hs
