name:                static-analysis
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/static-analysis#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     AST,Interpreter,SignLattice,Types
  build-depends:       base                 >= 4.7 && < 5,
                       containers           == 0.5.*,
                       lattices             == 1.5.*,
                       lens                 == 4.14.*,
                       mtl                  == 2.2.*,
                       recursion-schemes    == 5,
                       transformers         == 0.5.*,
                       unordered-containers == 0.2.*
  default-language:    Haskell2010

executable static-analysis-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , static-analysis
  default-language:    Haskell2010

test-suite static-analysis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , static-analysis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/static-analysis
